telepathy-butterfly-0.3.4 (UNRELEASED)
======================================

Dependencies:

 * telepathy-python 0.15.6

Enhancements:

 * Implement Connection.Interface.Contacts

Fixes:

 * Fixed AttributeError in on_contact_memberships_changed (fd.o #19919)
 * Actually emit the SimplePresence.PresencesChanged signal
 * Fix RequestHandles for contact and DnD in empathy (fd.o #22224)

telepathy-butterfly-0.3.3 (06-01-2009)
======================================

Dependencies:

 * telepathy-python 0.15.5

Enhancements:

 * Exit if the connection manager is already running.
 * Implemented GetAliases & GetAliasFlags from Connection.Interface.Aliasing.
 * Implement SimplePresence.
 * Use telepathy.utils.debug_divert_messages to divert log messages.

Fixes:

 * Encode the user alias as UTF-8 when setting a new display name.

telepathy-butterfly-0.3.2 (20-07-2008)
======================================

Enhancements:

 * Updated the configure script and the gnu_dirs tool
 * The last user in a multi user conversation no longer leaves the conversation

Fixes:

 * Fixed self presence handling
 * Fixed self avatar handling
 * Fixed an Attribute exception is ButterflyAvatars
 * Fixed AvatarRetrieved not being emitted for self avatar
 * Fixed the configure script to generate a Makefile able to handle DISTDIR
 * Fixed GetKnownAvatarTokens for self handle when no avatar is known

telepathy-butterfly-0.3.1 (16-01-2008)
======================================

Fixes:

 * No longuer disconnect when BUTTERFLY_PERSIST is set and the last client
 * Group names are case insensitive, added a fix to avoid creating a new group
 * Fixed Alias setting on contacts not in the FORWARD list
 * Fixed adding contacts to group during contact addition
 * Fixed utf-8 encoded handle names

telepathy-butterfly-0.3.0 (12-01-2008)
======================================

The "Blue Morpho" release.

Enhancements:

 * Complete rewrite using the new pymsn-0.3.0

telepathy-butterfly-0.1.4